First and last name are mandatory for each user
